working services with db