@@ -4,7 +4,10 @@ import edu.saspsproject.dto.AppointmentRequest;
 import edu.saspsproject.dto.AvailabilityResponse;
 import edu.saspsproject.model.Appointment;
 import edu.saspsproject.model.Institution;
-import edu.saspsproject.repository.InMemoryRepository;
+import edu.saspsproject.model.User;
+import edu.saspsproject.repository.AppointmentRepository;
+import edu.saspsproject.repository.InstitutionRepository;
+import edu.saspsproject.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -18,36 +21,39 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class AppointmentService {
 
-    private final InMemoryRepository repository;
+    private final AppointmentRepository appointmentRepository;
+    private final InstitutionRepository institutionRepository;
+    private final UserRepository userRepository;
     private final NotificationService notificationService;
 
-    public Long saveAppointment(AppointmentRequest appointmentRequest) {
+    public Long saveAppointment(AppointmentRequest request) {
         // Complex validation logic - hardcoded without Validator pattern
-        validateAppointmentRequest(appointmentRequest);
-        
-        Institution institution = repository.findInstitutionById(appointmentRequest.getInstitutionId());
-        if (institution == null) {
-            throw new IllegalArgumentException("Institution not found");
-        }
+        validateAppointmentRequest(request);
+
+        Institution institution = institutionRepository.findById(request.getInstitutionId())
+                .orElseThrow(() -> new IllegalArgumentException("Institution not found"));
 
         // Business rules validation - hardcoded without Strategy pattern
-        validateBusinessRules(appointmentRequest, institution);
+        validateBusinessRules(request, institution);
+
+        User user = findOrCreateUser(request);
 
         // Create appointment with complex logic - no Factory pattern
-        Appointment appointment = createAppointmentFromRequest(appointmentRequest, institution);
-        
+        Appointment appointment = createAppointmentFromRequest(request, user.getId());
+
         // Calculate estimated duration based on service type - hardcoded
         calculateEstimatedDuration(appointment);
-        
+
         // Set priority and status based on complex rules - no Strategy pattern
-        setPriorityAndStatus(appointment, institution);
+        setPriorityAndStatus(appointment);
 
-        Long id = repository.save(appointment);
-        
+        // Save in DB
+        Appointment saved = appointmentRepository.save(appointment);
+
         // Send different notifications based on institution type - hardcoded without Adapter pattern
-        sendNotifications(appointment, institution);
+        sendNotifications(saved);
 
-        return id;
+        return saved.getId();
     }
 
     private void validateAppointmentRequest(AppointmentRequest request) {
@@ -57,11 +63,14 @@ public class AppointmentService {
         if (request.getAppointmentTime() == null) {
             throw new IllegalArgumentException("Appointment time is required");
         }
-        if (request.getCustomerName() == null || request.getCustomerName().trim().isEmpty()) {
+        if (request.getCustomerName() == null || request.getCustomerName().isBlank()) {
             throw new IllegalArgumentException("Customer name is required");
         }
         if (request.getCustomerEmail() == null || !request.getCustomerEmail().contains("@")) {
             throw new IllegalArgumentException("Valid email is required");
+        }
+        if (request.getServiceType() == null || request.getServiceType().isBlank()) {
+            throw new IllegalArgumentException("Service type is required");
         }
     }
 
@@ -73,77 +82,111 @@ public class AppointmentService {
 
         // Check if appointment is within institution hours
         LocalTime appointmentTime = request.getAppointmentTime().toLocalTime();
-        if (appointmentTime.isBefore(institution.getOpeningTime()) || 
-            appointmentTime.isAfter(institution.getClosingTime())) {
+        if (appointmentTime.isBefore(institution.getOpeningTime()) ||
+                appointmentTime.isAfter(institution.getClosingTime())) {
             throw new IllegalArgumentException("Appointment must be within institution hours");
         }
     }
 
-    private Appointment createAppointmentFromRequest(AppointmentRequest request, Institution institution) {
+    private User findOrCreateUser(AppointmentRequest request) {
+        return userRepository.findByEmail(request.getCustomerEmail())
+                .map(existing -> {
+                    // optional: update name/phone if changed
+                    existing.setName(request.getCustomerName());
+                    existing.setPhone(request.getCustomerPhone());
+                    return userRepository.save(existing);
+                })
+                .orElseGet(() -> {
+                    User user = new User();
+                    user.setName(request.getCustomerName());
+                    user.setEmail(request.getCustomerEmail());
+                    user.setPhone(request.getCustomerPhone());
+                    return userRepository.save(user);
+                });
+    }
+
+    private Appointment createAppointmentFromRequest(AppointmentRequest request, Long userId) {
+        LocalDateTime now = LocalDateTime.now();
+
         Appointment appointment = new Appointment();
         appointment.setInstitutionId(request.getInstitutionId());
-        appointment.setInstitutionType(request.getInstitutionType());
-        appointment.setAppointmentTime(request.getAppointmentTime());
-        appointment.setCustomerName(request.getCustomerName());
-        appointment.setCustomerEmail(request.getCustomerEmail());
-        appointment.setCustomerPhone(request.getCustomerPhone());
-        appointment.setServiceType(request.getServiceType());
-        appointment.setPriorityLevel(request.getPriorityLevel() != null ? request.getPriorityLevel() : "NORMAL");
+        appointment.setUserId(userId);
+
+        String title = "Programare " + request.getServiceType() + " la instituția " + request.getInstitutionId();
+        appointment.setTitle(title);
+
         appointment.setNotes(request.getNotes());
+        appointment.setAppointmentTime(request.getAppointmentTime());
+        appointment.setServiceType(parseServiceType(request.getServiceType()));
+        appointment.setPriorityLevel(parsePriorityLevel(request.getPriorityLevel()));
         appointment.setDocumentRequired(request.getDocumentRequired());
+        appointment.setReminderSent(false);
+        appointment.setCreatedAt(now);
+        appointment.setUpdatedAt(now);
+
         return appointment;
+    }
+
+    private Appointment.ServiceType parseServiceType(String value) {
+        try {
+            return Appointment.ServiceType.valueOf(value.toUpperCase(Locale.ROOT));
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Invalid service type: " + value);
+        }
+    }
+
+    private Appointment.PriorityLevel parsePriorityLevel(String value) {
+        if (value == null || value.isBlank()) {
+            return Appointment.PriorityLevel.MEDIUM;
+        }
+        try {
+            return Appointment.PriorityLevel.valueOf(value.toUpperCase(Locale.ROOT));
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Invalid priority level: " + value);
+        }
     }
 
     private void calculateEstimatedDuration(Appointment appointment) {
         // Hardcoded duration calculation - should use Strategy pattern in v2
         double baseDuration;
+
         switch (appointment.getServiceType()) {
-            case "ELIBERARE_CI":
-                baseDuration = 30.0;
-                break;
-            case "CERTIFICAT_NASTERE":
-                baseDuration = 20.0;
-                break;
-            case "DECLARATIE_FISCALA":
-                baseDuration = 45.0;
-                break;
-            default:
-                baseDuration = 30.0;
+            case ELIBERARE_CI -> baseDuration = 30.0;
+            case CERTIFICAT_NASTERE -> baseDuration = 20.0;
+            case DECLARATIE_FISCALA -> baseDuration = 45.0;
+            default -> baseDuration = 30.0;
         }
-        
+
         // Add extra time based on priority
-        if ("URGENT".equals(appointment.getPriorityLevel())) {
+        if (appointment.getPriorityLevel() == Appointment.PriorityLevel.URGENT) {
             baseDuration *= 0.8;
         }
-        
+
         appointment.setEstimatedDuration(baseDuration);
     }
 
-    private void setPriorityAndStatus(Appointment appointment, Institution institution) {
-        // Complex priority and status logic - should use Strategy pattern in v2
-        if ("URGENT".equals(appointment.getPriorityLevel())) {
-            appointment.setStatus("CONFIRMED");
+    private void setPriorityAndStatus(Appointment appointment) {
+        if (appointment.getPriorityLevel() == Appointment.PriorityLevel.URGENT) {
+            appointment.setStatus(Appointment.Status.CONFIRMED);
         } else {
-            appointment.setStatus("PENDING");
+            appointment.setStatus(Appointment.Status.PENDING);
         }
     }
 
-    private void sendNotifications(Appointment appointment, Institution institution) {
+    private void sendNotifications(Appointment appointment) {
         // Hardcoded notification logic - should use Adapter pattern in v2
         notificationService.sendConfirmation(appointment);
     }
 
     public AvailabilityResponse getAvailability(Long institutionId) {
-        Institution institution = repository.findInstitutionById(institutionId);
-        if (institution == null) {
-            throw new IllegalArgumentException("Institution not found");
-        }
+        Institution institution = institutionRepository.findById(institutionId)
+                .orElseThrow(() -> new IllegalArgumentException("Institution not found"));
 
         // Generate slots based on institution-specific rules - hardcoded
         List<LocalDateTime> allSlots = generateAvailableSlots(institution);
-        
+
         // Get all booked slots
-        Set<LocalDateTime> bookedSlots = repository.findByInstitutionId(institutionId)
+        Set<LocalDateTime> bookedSlots = appointmentRepository.findByInstitutionId(institutionId)
                 .stream()
                 .map(Appointment::getAppointmentTime)
                 .collect(Collectors.toSet());
@@ -160,127 +203,149 @@ public class AppointmentService {
     private List<LocalDateTime> generateAvailableSlots(Institution institution) {
         List<LocalDateTime> slots = new ArrayList<>();
         LocalDate startDate = LocalDate.now().plusDays(1);
-        
+
         for (int day = 0; day < 14; day++) {
             LocalDate currentDate = startDate.plusDays(day);
-            
+
+            boolean weekend = currentDate.getDayOfWeek().getValue() == 6
+                    || currentDate.getDayOfWeek().getValue() == 7;
+
             // Skip weekends for government institutions - hardcoded logic
-            if ((currentDate.getDayOfWeek().getValue() == 6 || currentDate.getDayOfWeek().getValue() == 7) &&
-                ("PRIMARIA".equals(institution.getType()) || "ANAF".equals(institution.getType()))) {
+            if (weekend && (institution.getType() == Institution.InstitutionType.PRIMARIA
+                    || institution.getType() == Institution.InstitutionType.ANAF)) {
                 continue;
             }
-            
+
             LocalTime currentTime = institution.getOpeningTime();
             while (currentTime.isBefore(institution.getClosingTime())) {
                 slots.add(LocalDateTime.of(currentDate, currentTime));
-                
+
                 // Different slot intervals based on institution type - hardcoded
-                if ("ANAF".equals(institution.getType())) {
+                if (institution.getType() == Institution.InstitutionType.ANAF) {
                     currentTime = currentTime.plusMinutes(45);
                 } else {
                     currentTime = currentTime.plusMinutes(30);
                 }
             }
         }
-        
+
         return slots;
     }
 
     // Additional methods that show complexity without patterns
     public List<Appointment> getCustomerAppointments(String email) {
-        return repository.findByCustomerEmail(email);
+        return userRepository.findByEmail(email)
+                .map(user -> appointmentRepository.findByUserId(user.getId()))
+                .orElse(Collections.emptyList());
     }
 
     public List<Institution> getAllInstitutions() {
-        return repository.findAllInstitutions();
+        return institutionRepository.findAll();
     }
 
-    public List<edu.saspsproject.model.Service> getServicesByInstitutionType(String institutionType) {
-        return repository.findServicesByInstitutionType(institutionType);
+    public List<String> getServicesByInstitutionType(String institutionType) {
+        Institution.InstitutionType type;
+        try {
+            type = Institution.InstitutionType.valueOf(institutionType.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Invalid institution type: " + institutionType);
+        }
+
+        List<Institution> institutions = institutionRepository.findByType(type);
+
+        return institutions.stream()
+                .filter(i -> i.getAvailableServices() != null)
+                .flatMap(i -> i.getAvailableServices().stream())
+                .distinct()
+                .toList();
     }
 
     public List<Appointment> getAllAppointments() {
-        return repository.findAll();
+        return appointmentRepository.findAll();
     }
 
     public Map<String, Object> getGlobalStats() {
-        List<Appointment> allAppointments = repository.findAll();
+        List<Appointment> all = appointmentRepository.findAll();
         Map<String, Object> stats = new HashMap<>();
-        
-        stats.put("totalAppointments", allAppointments.size());
-        stats.put("totalInstitutions", repository.findAllInstitutions().size());
-        
+
+        stats.put("totalAppointments", all.size());
+        stats.put("totalInstitutions", institutionRepository.count());
+
         // Group by institution
-        Map<Long, Long> byInstitution = allAppointments.stream()
-            .collect(Collectors.groupingBy(
-                Appointment::getInstitutionId,
-                Collectors.counting()
-            ));
+        Map<Long, Long> byInstitution = all.stream()
+                .collect(Collectors.groupingBy(
+                        Appointment::getInstitutionId,
+                        Collectors.counting()
+                ));
         stats.put("appointmentsByInstitution", byInstitution);
-        
+
         // Group by service type
-        Map<String, Long> byService = allAppointments.stream()
-            .filter(a -> a.getServiceType() != null)
-            .collect(Collectors.groupingBy(
-                Appointment::getServiceType,
-                Collectors.counting()
-            ));
+        Map<Appointment.ServiceType, Long> byService = all.stream()
+                .filter(a -> a.getServiceType() != null)
+                .collect(Collectors.groupingBy(
+                        Appointment::getServiceType,
+                        Collectors.counting()
+                ));
         stats.put("appointmentsByService", byService);
-        
+
         return stats;
     }
 
     public Map<String, Object> getInstitutionStats(Long institutionId) {
-        List<Appointment> appointments = repository.findByInstitutionId(institutionId);
-        Institution institution = repository.findInstitutionById(institutionId);
-        
+        List<Appointment> appointments = appointmentRepository.findByInstitutionId(institutionId);
+        Institution institution = institutionRepository.findById(institutionId).orElse(null);
+
         Map<String, Object> stats = new HashMap<>();
         stats.put("institutionId", institutionId);
         stats.put("institutionName", institution != null ? institution.getName() : "Unknown");
         stats.put("totalAppointments", appointments.size());
-        
+
         // Group by service type for this institution
-        Map<String, Long> byService = appointments.stream()
-            .filter(a -> a.getServiceType() != null)
-            .collect(Collectors.groupingBy(
-                Appointment::getServiceType,
-                Collectors.counting()
-            ));
+        Map<Appointment.ServiceType, Long> byService = appointments.stream()
+                .filter(a -> a.getServiceType() != null)
+                .collect(Collectors.groupingBy(
+                        Appointment::getServiceType,
+                        Collectors.counting()
+                ));
         stats.put("appointmentsByService", byService);
-        
+
         // Calculate average appointments per day
         if (!appointments.isEmpty()) {
             LocalDate firstDate = appointments.stream()
-                .map(a -> a.getAppointmentTime().toLocalDate())
-                .min(LocalDate::compareTo)
-                .orElse(LocalDate.now());
+                    .map(a -> a.getAppointmentTime().toLocalDate())
+                    .min(LocalDate::compareTo)
+                    .orElse(LocalDate.now());
+
             LocalDate lastDate = appointments.stream()
-                .map(a -> a.getAppointmentTime().toLocalDate())
-                .max(LocalDate::compareTo)
-                .orElse(LocalDate.now());
-            
-            long daysBetween = firstDate.until(lastDate).getDays() + 1;
+                    .map(a -> a.getAppointmentTime().toLocalDate())
+                    .max(LocalDate::compareTo)
+                    .orElse(LocalDate.now());
+
+            long daysBetween = Math.max(1, firstDate.until(lastDate).getDays() + 1);
             double avgPerDay = (double) appointments.size() / daysBetween;
             stats.put("averageAppointmentsPerDay", avgPerDay);
         }
-        
+
         return stats;
     }
 
     public List<Appointment> getAppointmentsByDate(String dateString) {
+        LocalDate date;
         try {
-            LocalDate date = LocalDate.parse(dateString);
-            return repository.findAll().stream()
-                .filter(a -> a.getAppointmentTime().toLocalDate().equals(date))
-                .collect(Collectors.toList());
+            date = LocalDate.parse(dateString);
         } catch (Exception e) {
             throw new IllegalArgumentException("Invalid date format. Use YYYY-MM-DD");
         }
+
+        return appointmentRepository.findAll().stream()
+                .filter(a -> a.getAppointmentTime().toLocalDate().equals(date))
+                .collect(Collectors.toList());
     }
 
     public List<Appointment> getAppointmentsByService(String serviceType) {
-        return repository.findAll().stream()
-            .filter(a -> serviceType.equals(a.getServiceType()))
-            .collect(Collectors.toList());
+        Appointment.ServiceType parsed = parseServiceType(serviceType);
+        return appointmentRepository.findAll().stream()
+                .filter(a -> parsed == a.getServiceType())
+                .collect(Collectors.toList());
     }
 }
